--- a/index.html
+++ b/index.html
@@ -38,64 +38,68 @@
 
     <section class="experience">
       <div class="xp-years">
-        <span class="principal" title="Principal">Principal</span>
+        <span class="principal" title="Principal">en cours</span>
         2024 — Now
       </div>
-      <h2>IEFT</h2>
-      <p class="xp-tagline">Blabla</p>
+      <h2>Mysterious Box Kids</h2>
+      <p class="xp-tagline">L'aventure en boîte pour les détectives en herbe.</p>
       <p>
-        J'ai blabla
+        J'ai créé une box destinée aux enfants de 5 à 10 ans, composée de 4 épisodes où l'enfant doit résoudre une enquête. Chaque box contient plusieurs mini-jeux conçus pour stimuler l'esprit et la créativité des enfants. À la fin de chaque box, l'enfant doit rédiger un "rapport" pour expliquer les éléments découverts et compris. Un guide en ligne est disponible pour les parents et un autre pour les enfants, facilitant ainsi l'accompagnement et l'autonomie dans l'aventure.
       </p>
       <p class="role">
-        <strong>Mon rôle ?</strong> Bla bla
+        <strong>Mon rôle ?</strong> Créateur et concepteur principal, responsable de la conception des enquêtes et des mini-jeux, de la rédaction des guides pour les parents et les enfants, et de la gestion de l'ensemble du projet.
       </p>
     </section>
 
     <section class="experience">
       <div class="xp-years">
-        <span class="plaisir" title="Plaisir">Fondateur</span>
-        2021 – 2022
+        <span class="principal" title="Plaisir">en cours</span>
+        2023 – Now
       </div>
-      <h2>Newsletter</h2>
-      <p class="xp-tagline">Blabla</p>
+      <h2>Newsletter - Cyber Cawa</h2>
+      <p class="xp-tagline">Votre rendez-vous quotidien avec l'actualité technologique.</p>
       <p>
-        J'ai blabla
+        J'ai lancé une newsletter sur le thème de la technologie au sens large. Initialement, la veille était effectuée chaque matin et la newsletter était publiée et envoyée sur LinkedIn de façon hebdomadaire, chaque vendredi. Depuis quelques mois, la newsletter est désormais envoyée quotidiennement chaque matin. Le principal travail consiste en la curation des informations les plus pertinentes et intéressantes.
       </p>
       <p class="role">
-        <strong>Mon rôle ?</strong> Bla bla
+        <strong>Mon rôle ?</strong> Créateur et rédacteur principal, responsable de la veille technologique quotidienne, de la curation des informations, et de la publication et l'envoi de la newsletter sur LinkedIn.
       </p>
     </section>
 
     <section class="experience">
       <div class="xp-years">
-        <span class="plaisir" title="Plaisir">Fondateur</span>
-        2021 – 2022
+        <span class="plaisir" title="Plaisir">termine</span>
+        2022 – 2024
       </div>
       <h2>Addtabs</h2>
-      <p class="xp-tagline">Blabla</p>
+      <p class="xp-tagline">Simplifiez vos liens, optimisez vos partages.</p>
       <p>
-        J'ai blabla
+        J'ai créé un site complet pour le raccourcissement d'URL, financé par abonnement. Le site a atteint le point d'équilibre financier grâce à sa popularité. Utilisé par le Rectorat de l'académie d'Aix-Marseille et le réseau Compétence et Développement, il a su gérer des charges importantes de trafic.
       </p>
       <p class="role">
-        <strong>Mon rôle ?</strong> Bla bla
+        <strong>Mon rôle ?</strong> Créateur et développeur principal, responsable de la conception, du développement et de la gestion du site. J'ai également supervisé la stratégie de financement par abonnement et assuré la stabilité du site sous de fortes charges d'utilisation.
       </p>
     </section>
 
+
     <section class="experience">
-      <div class="xp-years">2013 – 2016</div>
-      <h2>Rêve de bien-être</h2>
-      <p class="xp-tagline">Blabla</p>
+      <div class="xp-years">
+        <span class="plaisir" title="Plaisir">termine</span>
+        2021 - 2021
+      </div>
+      <h2>Amazon</h2>
+      <p class="xp-tagline">Optimisation et gestion des invendus.</p>
       <p>
-        J'ai blabla
+        J'ai créé et géré seul une boutique sur Amazon pour la revente d'invendus et de produits de déstockage. Mon rôle comprenait l'analyse des prix, la mise en ligne des produits, ainsi que la gestion de l'ensemble de la chaîne d'expédition.
       </p>
       <p class="role">
-        <strong>Mon rôle ?</strong> Bla bla
+        <strong>Mon rôle ?</strong> Créateur et gestionnaire de boutique unique, responsable de l'analyse des prix, de la mise à jour des listings de produits, et de la gestion de la logistique d'expédition.
       </p>
     </section>
 
     <section class="experience">
       <div class="xp-years">
-        <span class="plaisir" title="Plaisir">Fondateur</span>
+        <span class="plaisir" title="Plaisir">termine</span>
         2019 – 2021
       </div>
       <h2>Twitch / Youtube</h2>
@@ -110,7 +114,7 @@
 
     <section class="experience">
       <div class="xp-years">
-        <span class="plaisir" title="Plaisir">Co-Fondateur</span>
+        <span class="plaisir" title="Plaisir">Termine</span>
         2020 – 2021
       </div>
       <h2>Corner Geek</h2>
@@ -125,7 +129,20 @@
 
     <section class="experience">
       <div class="xp-years">
-        <span class="plaisir" title="Plaisir">Fondateur</span>
+        <span class="principal" title="Plaisir">en cours</span>
+        2016 – Now</div>
+      <h2>Rêve de bien-être</h2>
+      <p class="xp-tagline">Un projet de A à Z.</p>
+      <p>
+        J'ai construit un site WordPress pour ma compagne, en utilisant une base WordPress et un thème. J'étais responsable de la mise en ligne, de la construction du site, du référencement et de la maintenance. Pendant la période COVID, j'ai également mis en place une boutique en ligne grâce à WooCommerce.      </p>
+      <p class="role">
+        <strong>Mon rôle ?</strong> Développeur et gestionnaire de site, en charge de la création, de la mise en ligne, du référencement, de la maintenance et de l'intégration de la boutique en ligne avec WooCommerce.
+      </p>
+    </section>
+
+    <section class="experience">
+      <div class="xp-years">
+        <span class="plaisir" title="Plaisir">termine</span>
         2009 – 2010
       </div>
       <h2>Graphe Pictures</h2>
