--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h2>Addtabs</h2>
       <p class="xp-tagline">Simplifiez vos liens, optimisez vos partages.</p>
       <p>
-        J'ai créé un site complet pour le raccourcissement d'URL, financé par abonnement. Le site a atteint le point d'équilibre financier grâce à sa popularité. Utilisé par le Rectorat de l'académie d'Aix-Marseille et le réseau Compétence et Développement, il a su gérer des charges importantes de trafic.
+        J'ai créé un site complet pour le raccourcissement d'URL, financé par abonnement. Le site a atteint le point d'équilibre financier grâce à sa popularité. Utilisé par le Rectorat de l'académie d'Aix-Marseille et le réseau Compétences et Développement, il a su gérer des charges importantes de trafic.
       </p>
       <p class="role">
         <strong>Mon rôle ?</strong> Créateur et développeur principal, responsable de la conception, du développement et de la gestion du site. J'ai également supervisé la stratégie de financement par abonnement et assuré la stabilité du site sous de fortes charges d'utilisation.
@@ -156,55 +156,17 @@
     </section>
 
     <section class="text-section mini-resume">
-      <div class="gutter-label">micro-CV</div>
-      <h2>Diplômes et technologies maîtrisées (pour le Ctrl-F)</h2>
+      <div class="gutter-label">mini-CV</div>
+      <h2>Différents postes occupés</h2>
       <p>
-        Ingénieur diplômé, spécialité informatique, à l’INSA de Lyon de 2010 à
-        2013.
+        Coordinateur pédagogique national depuis mars 2022 à Compétences & Développement puis ensuite à l'IFAG et maintenant à l'IEFT.
       </p>
       <p>
-        Diplôme universitaire de technologie, à l’IUT d’Annecy de 2008 à 2010.
+        Coordinateur administratif à l'IFAG de Lille (Réseau Compétences & Développement).
       </p>
       <p>
-        Petit détour Erasmus par l’École Polytechnique Fédérale de Lausanne en
-        Suisse.
-      </p>
-      <p>
-        Je parle, comprends, lit, travaille, présente et papote en anglais
-        (avoir bossé dans une boîte rachetée par des anglais m’a rassuré sur mes
-        compétences là-dedans).
-      </p>
-      <p>
-        Je comprends et écrit une bagatelle de langages et technos. Avant, je
-        prenais du temps d’en préciser mon expertise, mais j’ai appris à force
-        que ça ne voulait pas dire grand chose ; j’ai travaillé ou bidouillé,
-        indistinctement, avec du Ruby, du Python, du CSS, de l’Elixir, de
-        l’Haskell, du Purescript, du SQL, du Rust, du React, du VueJS, de
-        l’Ember, du Rails, du Phoenix, du Swift, du Kotlin, du Dart, du Flutter,
-        du PHP, du Symfony, du C, du C++, du Qt, du SVG, du Bash, du Java, le
-        tout avec GitHub, GitLab, git tout court, sous (Arch)Linux comme macOS.
-      </p>
+        Avec 11 ans d'expérience dans le monde de l'informatique, j'ai évolué de technicien à assistant de direction, en passant par des rôles variés tels qu'acheteur, commercial, community manager, et en accomplissant de nombreuses petites tâches du quotidien.      </p>
     </section>
-    <section class="text-section why-contact-me">
-      <div class="gutter-label">recruteur·se·s</div>
-      <h2>Je fais de tout, mais pas avec tout le monde</h2>
-      <p>
-        Du développement front comme back, de la récolte de besoin, du
-        management, du design, j’ai un peu fait de tout dans mon périmètre de
-        jeu habituel.
-      </p>
-      <p>
-        À force, je commence à comprendre quelles sont les entreprises et les
-        projets avec lesquelles je suis le plus efficace et avec dans lesquels
-        je me sens bien – je préfère les structures avec beaucoup d’autonomie,
-        une vision produit assez ancrée dans le quotidien et un management à la
-        fois humain et exigeant.
-      </p>
-      <p>
-        Un profil comme le mien vous intéresse ? Je ne cherche pas de nouvelles
-        aventures en tant que salarié, mais vous pouvez toujours
-        <a href="mailto:bonjour@stanisoft.net">m’envoyer un e-mail :)</a>
-      </p>
-    </section>
+    
   </body>
 </html>
