--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pierretouzet.fr — Pierre Touzet (site pro)</title>
+    <title>pierretouzet.fr — Pierre Touzet</title>
     <link rel="icon" href="favicon.png" type="image/png" />
     <meta
       name="description"
@@ -20,7 +20,7 @@
 
     <figure class="profile-picture">
       <img src="./pierre.jpg" alt="Photo de portrait" width="186" height="186" />
-      <figcaption>Depuis, j’ai 38 ans.</figcaption>
+      <figcaption>J’ai 38 ans.</figcaption>
     </figure>
 
     <header>
@@ -99,21 +99,6 @@
 
     <section class="experience">
       <div class="xp-years">
-        <span class="plaisir" title="Plaisir">termine</span>
-        2019 – 2021
-      </div>
-      <h2>Twitch / Youtube</h2>
-      <p class="xp-tagline">Votre source hebdomadaire pour tout ce qui touche à la technologie.</p>
-      <p>
-        J'avais créé une chaîne Twitch principalement axée sur la technologie, le montage et le dépannage de PC. Chaque semaine, avec <a href="https://www.linkedin.com/in/stephanekrawczyk/">Stéphane Krawczyk</a>, nous couvrions l'actualité technologique. Nous avions plusieurs rendez-vous hebdomadaires pour nos spectateurs. En parallèle, <a href="https://www.linkedin.com/in/stephanekrawczyk/">Stéphane Krawczyk</a> s'occupait de la production, du montage et de la direction artistique des vidéos B2B sur YouTube à destination des fournisseurs, dont certaines peuvent encore être trouvées en cherchant bien.
-      </p>
-      <p class="role">
-        <strong>Mon rôle ?</strong> Créateur et animateur principal, responsable des sessions de montage et dépannage de PC, de la couverture hebdomadaire des actualités technologiques avec <a href="https://www.linkedin.com/in/stephanekrawczyk/">Stéphane Krawczyk</a>.
-      </p>
-    </section>
-
-    <section class="experience">
-      <div class="xp-years">
         <span class="plaisir" title="Plaisir">Termine</span>
         2020 – 2021
       </div>
@@ -124,6 +109,21 @@
       </p>
       <p class="role">
         <strong>Mon rôle ?</strong> En tant que co-fondateur, je cherchais constamment des moyens d'animer le serveur et de proposer des sujets d'échanges pour notre communauté.
+      </p>
+    </section>
+
+    <section class="experience">
+      <div class="xp-years">
+        <span class="plaisir" title="Plaisir">termine</span>
+        2019 – 2021
+      </div>
+      <h2>Twitch / Youtube</h2>
+      <p class="xp-tagline">Votre source hebdomadaire pour tout ce qui touche à la technologie.</p>
+      <p>
+        J'avais créé une chaîne Twitch principalement axée sur la technologie, le montage et le dépannage de PC. Chaque semaine, avec <a href="https://www.linkedin.com/in/stephanekrawczyk/">Stéphane Krawczyk</a>, nous couvrions l'actualité technologique. Nous avions plusieurs rendez-vous hebdomadaires pour nos spectateurs. En parallèle, <a href="https://www.linkedin.com/in/stephanekrawczyk/">Stéphane Krawczyk</a> s'occupait de la production, du montage et de la direction artistique des vidéos B2B sur YouTube à destination des fournisseurs, dont certaines peuvent encore être trouvées en cherchant bien.
+      </p>
+      <p class="role">
+        <strong>Mon rôle ?</strong> Créateur et animateur principal, responsable des sessions de montage et dépannage de PC, de la couverture hebdomadaire des actualités technologiques avec <a href="https://www.linkedin.com/in/stephanekrawczyk/">Stéphane Krawczyk</a>.
       </p>
     </section>
 
@@ -165,7 +165,7 @@
         Coordinateur administratif à l'IFAG de Lille (Réseau Compétences & Développement).
       </p>
       <p>
-        Avec 11 ans d'expérience dans le monde de l'informatique, j'ai évolué de technicien à assistant de direction, en passant par des rôles variés tels qu'acheteur, commercial, community manager, et en accomplissant de nombreuses petites tâches du quotidien.      </p>
+        Avec 11 ans d'expérience dans le monde de l'informatique, j'ai évolué de technicien à direction, en passant par des rôles variés tels qu'acheteur, commercial, community manager, et en accomplissant de nombreuses petites tâches du quotidien.      </p>
     </section>
     
   </body>
