--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <figure class="profile-picture">
       <img src="./pierre.jpg" alt="Photo de portrait" width="186" height="186" />
-      <figcaption>J’ai 38 ans.</figcaption>
+      <figcaption>Je fais un test,J’ai 38 ans.</figcaption>
     </figure>
 
     <header>
