--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <dl class="contact-details">
       <dt>E-mail</dt>
       <dd><a href="mailto:bonjour@mecontacter.eu">bonjour@mecontacter.eu</a></dd>
+      <dt>CV</dt>
+      <dd><a href="mailto:bonjour@mecontacter.eu">bonjour@mecontacter.eu</a></dd>
+
     </dl>
 
     <figure class="profile-picture">
