--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <dt>E-mail</dt>
       <dd><a href="mailto:bonjour@mecontacter.eu">bonjour@mecontacter.eu</a></dd>
       <dt>CV</dt>
-      <dd><a href="mailto:bonjour@mecontacter.eu">CV institutionnel</a></dd>
+      <dd><a href="cv.html">CV institutionnel</a></dd>
 
     </dl>
 
