--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <dd><a href="mailto:bonjour@mecontacter.eu">bonjour@mecontacter.eu</a></dd>
       <dt>CV</dt>
       <dd><a href="cv.html">CV institutionnel</a></dd>
+      <dt>Bukket list</dt>
+      <dd><a href="bukketlist.html">Bukket list</a></dd>
+
 
     </dl>
 
