--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <dt>CV</dt>
       <dd><a href="cv.html">CV institutionnel</a></dd>
       <dt>Bukket list</dt>
-      <dd><a href="bukketlist.html">Bukket list</a></dd>
+      <dd><a href="bukketlist.html">The list</a></dd>
 
 
     </dl>
