--- a/bukketlist.html
+++ b/bukketlist.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Titre de la Page</title>
+    <title>Mon voyage de 38 ans commence ici</title>
     <link rel="icon" href="favicon.png" type="image/png" />
     <meta
       name="description"
-      content="Une brève description de la page, expliquant son contenu ou son objectif."
+      content="Mon voyage de 38 ans commence ici"
     />
     <link rel="stylesheet" href="fonts.css" />
     <link rel="stylesheet" href="style.css" />
