--- a/bukketlist.html
+++ b/bukketlist.html
@@ -13,6 +13,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <dl class="contact-details">
+      <dt>E-mail</dt>
+      <dd><a href="mailto:bonjour@mecontacter.eu">bonjour@mecontacter.eu</a></dd>
+      <dt>CV</dt>
+      <dd><a href="cv.html">CV institutionnel</a></dd>
+      <dt>CV</dt>
+      <dd><a href="index.html">CV des projets personnels</a></dd>
+
+
+    </dl>
+
+    <figure class="profile-picture">
+      <img src="./pierre.jpg" alt="Photo de portrait" width="186" height="186" />
+      <figcaption>J’ai 38 ans.</figcaption>
+    </figure>
+
     <header>
       <div class="stan-name">Bukket List</div>
       <h1>Mon voyage de 38 ans commence ici</h1>
