--- a/bukketlist.html
+++ b/bukketlist.html
@@ -47,6 +47,15 @@
           <p>Apprendre la langue des signes pour faciliter la communication avec les personnes sourdes et malentendantes, et promouvoir l'inclusion sociale.</p>
         </article>
         <article class="experience">
+          <div class="xp-years">
+            2024 — Now
+          </div>
+          <h3>Réapprendre à écrire</h3>
+          <p class="xp-tagline">Retrouver la fluidité et la beauté de l'écriture.</p>
+          <p>Redécouvrir le plaisir d'écrire à la main, améliorer ma calligraphie et renforcer ma connexion avec l'écrit à travers des exercices réguliers et des pratiques d'écriture manuscrite.</p>
+        </article>
+
+        <article class="experience">
             <div class="xp-years">
               2024 — Now
             </div>
