--- a/bukketlist.html
+++ b/bukketlist.html
@@ -70,6 +70,9 @@
           <h3>Passer un nouveau diplôme</h3>
           <p class="xp-tagline">Investir dans mon avenir.</p>
           <p>Acquérir de nouvelles compétences et élargir mes opportunités professionnelles en obtenant un diplôme supplémentaire dans mon domaine ou dans un secteur nouveau.</p>
+          <ul>
+            <li>Responsable d'ingénierie pédagogique</li>
+          </ul>
         </article>
         <article class="experience">
             <div class="xp-years">
@@ -84,7 +87,12 @@
                   <div class="segment pending"></div>
                   <div class="segment pending"></div>
                   <div class="segment pending"></div>
-            </div>           
+            </div>  
+            <ul>
+              <li>Chemise</li>
+              <li>Sweat</li>
+              <li>T-shirt</li>
+            </ul>       
         </article>
         <article class="experience">
             <div class="xp-years">
@@ -102,7 +110,7 @@
                   <div class="segment pending"></div>
                   <div class="segment pending"></div>
                   <div class="segment pending"></div>
-            </div>           
+            </div>    
         </article>
         <article class="experience">
             <div class="xp-years">
@@ -168,6 +176,20 @@
               <div class="segment pending"></div>
               <div class="segment pending"></div>
         </div>
+        <ul>
+          <li>Dans les coulisses du Marvel cinematic universe</li>
+          <li>Dans les coulisses du Marvel cinematic universe - volume 2</li>
+          <li>Petites habitudes, grandes réussites</li>
+          <li>Sapiens</li>
+          <li>L'intelligence artificielle n'existe pas</li>
+          <li>Le guide du copywriting</li>
+          <li>Père riche, père pauvre</li>
+          <li>Petites habitudes, grandes réussites</li>
+          <li>Le code</li>
+          <li>Votre temps est infini</li>
+          <li>Comprendre</li>
+          <li>Jony Ive - Le génial designer d'Apple</li>
+        </ul>       
         </article>
       </section>
 
@@ -318,6 +340,59 @@
                 <div class="segment pending"></div>
                 <div class="segment pending"></div>
           </div>
+          <ul>
+            <li>Albanie - Tirana</li>
+            <li>Allemagne - Berlin</li>
+            <li>Andorre - Andorre-la-Vieille</li>
+            <li>Arménie - Erevan</li>
+            <li>Autriche - Vienne</li>
+            <li>Azerbaïdjan - Bakou</li>
+            <li>Belgique - Bruxelles</li>
+            <li>Biélorussie - Minsk</li>
+            <li>Bosnie-Herzégovine - Sarajevo</li>
+            <li>Bulgarie - Sofia</li>
+            <li>Chypre - Nicosie</li>
+            <li>Croatie - Zagreb</li>
+            <li>Danemark - Copenhague</li>
+            <li>Espagne - Madrid</li>
+            <li>Estonie - Tallinn</li>
+            <li>Finlande - Helsinki</li>
+            <li>France - Paris</li>
+            <li>Géorgie - Tbilissi</li>
+            <li>Grèce - Athènes</li>
+            <li>Hongrie - Budapest</li>
+            <li>Irlande - Dublin</li>
+            <li>Islande - Reykjavik</li>
+            <li>Italie - Rome</li>
+            <li>Kazakhstan - Astana (anciennement Nur-Sultan)</li>
+            <li>Kosovo - Pristina</li>
+            <li>Lettonie - Riga</li>
+            <li>Liechtenstein - Vaduz</li>
+            <li>Lituanie - Vilnius</li>
+            <li>Luxembourg - Luxembourg</li>
+            <li>Macédoine du Nord - Skopje</li>
+            <li>Malte - La Valette</li>
+            <li>Moldavie - Chișinău</li>
+            <li>Monaco - Monaco</li>
+            <li>Monténégro - Podgorica</li>
+            <li>Norvège - Oslo</li>
+            <li>Pays-Bas - Amsterdam</li>
+            <li>Pologne - Varsovie</li>
+            <li>Portugal - Lisbonne</li>
+            <li>République tchèque - Prague</li>
+            <li>Roumanie - Bucarest</li>
+            <li>Royaume-Uni - Londres</li>
+            <li>Russie - Moscou</li>
+            <li>Saint-Marin - Saint-Marin</li>
+            <li>Serbie - Belgrade</li>
+            <li>Slovaquie - Bratislava</li>
+            <li>Slovénie - Ljubljana</li>
+            <li>Suède - Stockholm</li>
+            <li>Suisse - Berne</li>
+            <li>Turquie - Ankara</li>
+            <li>Ukraine - Kiev</li>
+            <li>Vatican - Cité du Vatican</li>
+          </ul>
           </article>
       </section>
 
