--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
                             // Create list item with correct URL
                             let li = document.createElement('li');
                             let a = document.createElement('a');
-                            a.href = 'pages/' + filename;  // Corrected to point to the correct directory
+                            a.href = 'newsletter-blog/' + filename;  // Corrected to point to the correct directory
                             a.textContent = displayText;
                             li.appendChild(a);
                             ul.appendChild(li);
