--- a/cv.html
+++ b/cv.html
@@ -14,13 +14,14 @@
   </head>
   <body>
     <dl class="contact-details">
-      <dt>E-mail</dt>
+    <dt>E-mail</dt>
       <dd><a href="mailto:bonjour@mecontacter.eu">bonjour@mecontacter.eu</a></dd>
       <dt>CV</dt>
       <dd><a href="index.html">CV des projets personnels</a></dd>
       <dt>Bukket list</dt>
       <dd><a href="bukketlist.html">The list</a></dd>
-
+      <dt>Newsletters</dt>
+      <dd><a href="newsletter.html">L'ensemble des newsletters</a></dd>
     </dl>
 
     <figure class="profile-picture">
