--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <dd><a href="cv.html">CV institutionnel</a></dd>
       <dt>Bukket list</dt>
       <dd><a href="bukketlist.html">The list</a></dd>
-
-
+      <dt>Newsletters</dt>
+      <dd><a href="newsletter.html">L'ensemble des newsletters</a></dd>
     </dl>
 
     <figure class="profile-picture">
