--- a/newsletter.html
+++ b/newsletter.html
@@ -30,10 +30,31 @@
     </figure>
 
     <header>
-      <div class="stan-name">Bukket List</div>
-      <h1>Mon voyage de 38 ans commence ici</h1>
-      <p class="tagline">À 38 ans, j’ai décidé de me lancer dans une aventure unique : explorer de nouvelles expériences et relever des défis qui me tiennent à cœur. Je me donne une année pour réaliser un maximum de ces projets, tous pensés pour enrichir ma vie, élargir mes horizons et me pousser hors de ma zone de confort. Chaque projet est une occasion de grandir, d’apprendre et de savourer pleinement chaque moment. Cette année, je vais vivre intensément, une expérience à la fois.</p>
+      <div class="stan-name">Newsletters</div>
+      <h1>Explorez toutes mes newsletters tech</h1>
+      <p class="tagline">Bienvenue dans l'archive complète de mes newsletters LinkedIn ! Chaque jour, je partage des analyses et réflexions sur des sujets variés liés à la technologie. Vous trouverez ici toutes mes publications, organisées chronologiquement pour vous permettre de suivre l'évolution des discussions et des tendances.
+        Parcourez les newsletters dans l'ordre de publication et plongez dans l'univers tech avec moi.</p>
+        <style>
+          .libutton {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 7px;
+            text-align: center;
+            outline: none;
+            text-decoration: none !important;
+            color: #ffffff !important;
+            width: 200px;
+            height: 32px;
+            border-radius: 16px;
+            background-color: #005C53;
+            font-family: "Luciole", Helvetica, sans-serif;
+          }
+        </style>
+      <center></center><a class="libutton" href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7044360403224535041" target="_blank">S’abonner sur LinkedIn</a>
     </header>
+
+    
 
     <!-- Section pour la première catégorie -->
     <section class="category">
