--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         Coordinateur administratif à l'IFAG de Lille (Réseau Compétences & Développement).
       </p>
       <p>
-        Avec 11 ans d'expérience dans le monde de l'informatique, j'ai évolué de technicien à assistant de direction, en passant par des rôles variés tels qu'acheteur, commercial, community manager, et en accomplissant de nombreuses petites tâches du quotidien.      </p>
+        Avec 11 ans d'expérience dans le monde de l'informatique, j'ai évolué de technicien à direction, en passant par des rôles variés tels qu'acheteur, commercial, community manager, et en accomplissant de nombreuses petites tâches du quotidien.      </p>
     </section>
     
   </body>
