Update content section with GPT

--- a/bukketlist/index.html
+++ b/bukketlist/index.html
@@ -161,7 +161,7 @@
 
                 <div class="col-3">
                     <div class="section-heading">
-                        <h3>SUCCESS</h3>
+                        <h3>COMMENT</h3>
                         <h2 class="section-title">How We Help You To Sell Your Product</h2>
                         <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
@@ -219,49 +219,38 @@
 
             </div>
 
-
         </section>
         <!--End of Introduction-->
 
         <!--Content Section-->
         <div id="services" class="scrollto clearfix">
-
             <div class="row no-padding-bottom clearfix">
                 <!--Content of the Right Side-->
-                <div class="col-2">
+                <div class="col-1">
                     <div class="section-heading">
-                        <h3>BELIEVING</h3>
-                        <h2 class="section-title">Focusing On What Matters Most</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <h3>L'IA</h3>
+                        <h2 class="section-title">Découvrez un nouveau mot chaque jour avec GPT !</h2>
                     </div>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                        dicta sunt explicabo.
+                    <p>
+                        J'ai créé un outil pour enrichir quotidiennement mon vocabulaire en français : un GPT qui me fait découvrir un mot par jour. L'idée est simple mais puissante : chaque jour, un nouveau mot est mis en lumière, avec sa définition, son usage dans une phrase, et parfois même son étymologie.
                     </p>
                     <p>
-                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet!
+                        Pourquoi ? Parce que maîtriser la langue française ne se limite pas à connaître les mots de base. En élargissant mon lexique un peu plus chaque jour, je vise à améliorer ma maîtrise de la langue, à m'exprimer avec plus de précision, et à apprécier la richesse de notre langue.
                     </p>
-                    <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
-                    <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
-                        WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
+                    <p class="section-subtitle">
+                        <b>Le prompt :</b> Ce GPT agit en tant que professeur de langue française spécialisé dans l'enseignement du vocabulaire pour un niveau intermédiaire. Chaque jour, il enseigne un nouveau mot français utilisé dans un langage courant. Pour chaque mot, il fournit une explication claire du sens, un exemple de phrase montrant l'utilisation du mot, et la prononciation phonétique du mot. Il donne aussi une astuce mnémotechnique pour aider à mémoriser le mot, ainsi que des informations sur son origine ou son étymologie, en citant des sources fiables pour chaque information. En outre, il propose une courte liste de synonymes ou de mots associés pour enrichir le vocabulaire de l'apprenant. Il s'assure que toutes les informations sont vérifiées et proviennent de sources dignes de confiance, sans inventer de contenu.
+                    </p>
+                    <a href="https://buymeacoffee.com/pierretouzet" class="button link-lightbox">
+                        ME REMERCIER <i class="fa-solid fa-mug-hot"></i>
+                    </a>
+                    <a href="https://chatgpt.com/g/g-8q0GGRCFv-le-mot-du-jour" class="button link-lightbox">
+                        UTILISER LE GPT <i class="fa-brands fa-rocketchat"></i>
                     </a>
                 </div>
                 <!--End Content Right Side-->
-
-                <div class="col-3">
-                    <img src="images/dancer.jpg" alt="Dancer"/>
-                </div>
-
             </div>
-
-
         </div>
         <!--End of Content Section-->
-
-
     </main>
     <!--End Main Content Area-->
 
