Update introduction section and page border

--- a/bukketlist/index.html
+++ b/bukketlist/index.html
@@ -41,13 +41,6 @@
 </div>
 <!--End of Preloader-->
 
-<div class="page-border" data-wow-duration="0.7s" data-wow-delay="0.2s">
-    <div class="top-border wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"></div>
-    <div class="right-border wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;"></div>
-    <div class="bottom-border wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;"></div>
-    <div class="left-border wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;"></div>
-</div>
-
 <div id="wrapper">
 
     <header id="banner" class="scrollto clearfix" data-enllax-ratio=".5">
@@ -162,9 +155,10 @@
                 <div class="col-3">
                     <div class="section-heading">
                         <h3>COMMENT</h3>
-                        <h2 class="section-title">How We Help You To Sell Your Product</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <h2 class="section-title"></h2>
+                        <p>
+                            En élargissant mon lexique un peu plus chaque jour, je vise à améliorer ma maîtrise de la langue, à m’exprimer avec plus de précision, et à apprécier la richesse de notre langue.
+                        </p>
                     </div>
 
                 </div>
@@ -180,8 +174,9 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>LA LECTURE</h4>
-                            <p>Has ne tritani atomorum conclusionemque, in dolorum volumus cotidieque eum. At vis choro
-                                neglegentur iudico</p>
+                            <p>
+                                La lecture est une source inépuisable de nouveaux mots. Chaque livre, article ou poème que je parcours me permet d’explorer des termes que je ne connaissais pas encore.
+                            </p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -195,9 +190,10 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>LES CONFERENCES</h4>
-                            <p>Cu vero ipsum vim, doctus facilisi sea in. Eam ex falli honestatis repudiandae, sit
-                                detracto mediocrem disputationi</p>
-                        </div>
+                            <p>
+                                Participer à des conférences et écouter des experts parler de sujets variés expose mon esprit à un vocabulaire spécialisé et souvent inédit.
+                            </p>
+                            </div>
                     </div>
                     <!--End of Icon Block-->
 
@@ -210,8 +206,9 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>L'IA</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
+                            <p>
+                                Mon outil GPT me propose chaque jour un mot, suivie d’une explication claire et concise. C’est un moyen simple et efficace d’intégrer de nouveaux termes à mon lexique.
+                            </p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
